[package]
name = "websocket-relay-rs"
version = "0.1.0"
authors = ["Ayuei <sefton_student@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
warp = "0.3"
futures = "*"
log = "0.4"
pretty_env_logger = "0.3"
tokio-core = "*"
hyper = "*"
tokio-tungstenite = "*"
futures-util = "*"
